Header flex mobile but padding/spacing need fixing.

--- a/src/scss/user/_banner-hero.scss
+++ b/src/scss/user/_banner-hero.scss
@@ -13,3 +13,17 @@
         justify-content: center;
     }
 }
+@media screen and (max-width: 830px) {
+    .banner-hero {
+        padding-top: 100px !important;
+        
+        .banner-hero--inner-content-container .wp-block-columns-is-layout-flex {
+            padding-top: 100px !important;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+    }
+}
